# s3shell

./: .gitignore  CLI_EXPERIENCE_PLAN.md  bucketboss.py  pyproject.toml  readme.md  s3shell.py
bucketboss/: app.py  cli.py  completer.py  config.py  formatting.py  parallel.py
bucketboss/commands/: findings.py  info.py  navigation.py  read.py  recon.py  search.py  shell.py  transfer.py
bucketboss/data/: enum_rules.json
bucketboss/providers/: base.py  s3.py  s3xml.py
